# Mini-Stockfish

./: .gitignore  README.md  requirements.txt
src/: accumulator.py  ai.py  bitboard.py  board.py  config.py  const.py  core_search.cp310-win_amd64.pyd  core_search.cpp  core_search.h  core_search.pyx  dragger.py  game.py  main.py  move.py  nnue_inference.lib  piece.py  setup.py  square.py  to_int8.py
src/book/: book.json  preprocess.py
src/endgame/: pgn_preprocess.py  tablebase.json
src/nnue/: 64502525.pth  64_1.106e-2.pt  64_1.106e-2.pth  64_1.106e-2_int8.pt  64indepth.pt  64indepth.pth  64indepth_int8.pt  CMakeLists.txt  __init__.py  halfkp.pt  halfkp.py  halfkp_best.pt  halfkp_best.pth  halfkp_single_input.pt  hidden128best.pth  hidden128best1.0076e-2.pth  hidden256best9.527e-3.pt  hidden256best9.527e-3.pth  hidden64best1.057e-2.pt  hidden64best1.057e-2.pth  hidden64best1.057e-2_int8.pt  hidden771best9.641e-3.pth  hiddensizetest128.py  hiddensizetest64.py  newbest.pth  newnnue.py  nnue_inference.cpp  nnue_inference.h  nnue_train.py  pth_to_pt.py  to_int8.py
